# clusterweave

./: .dockerignore  .gitattributes  .gitignore  BEGINNER_SETUP.md  CHANGELOG.md  CITATION.cff  DATA_SOURCES.md  Dockerfile  Dockerfile.web  Dockerfile.worker  LICENSE  README.md  SECURITY.md  THIRD_PARTY.md  accessions.txt  clusterweave.yml  docker-compose.local-faces.yml  docker-compose.yml  install_ncbi_cli.sh  package-lock.json  package.json  prepare_genomes_from_accessions.sh  pyproject.toml  run_annotation_and_detection.sh  run_bigscape.sh  run_clinker.sh  run_clusterweave.sh  run_figures.sh  run_integrated_evidence.sh  run_nplinker.sh  run_phylogeny.sh  summarize_clusterweave.sh
config/: defaults.env  local.env.template  metadata_template.tsv
docs/: ARCHITECTURE.md  BEGINNER_SETUP.md  CADES_SLURM_BACKEND.md  DATA_SOURCES.md  INSTALL.md  RELEASE_CHECKLIST.md  REPRODUCIBILITY.md  WEB_RUNTIME.md
examples/: README.md
profiles/: example_project.env  release_v0.1.0.env  release_v1.0.0.env
tests/: test_annotation_lineage_policy.py  test_antismash_input_preparation.py  test_antismash_input_sanitizer.py  test_antismash_shard_compaction.py  test_antismash_web_results.py  test_artifact_capture.py  test_bacterial_genbank_sanitizer.py  test_bacterial_multipanel_rendering.py  test_bacterial_stage1_contract.py  test_bgc_overlap_rendering.py  test_bigscape_mibig_cache.py  test_bigscape_multipanel_rendering.py  test_bigscape_network_rendering.py  test_bigscape_nonempty_staging.py  test_bigscape_public_db.py  test_bigscape_taxon_staging.py  test_clinker_labels.py  (+48 more)
(+92 files in other folders)
