[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "clusterweave"
version = "0.3.1b0"
description = "Workflow for biosynthetic target discovery and prioritization."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [
  { name = "ClusterWeave contributors" }
]
keywords = ["bioinformatics", "secondary-metabolism", "antismash", "bigscape", "clinker", "fungi"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[tool.setuptools]
py-modules = []
